--- a/content/ide-console/src/main/resources/ide-console/console.html
+++ b/content/ide-console/src/main/resources/ide-console/console.html
@@ -5,13 +5,19 @@
 		<title>Eclipse Dirigible Log Console</title>
 	</head>
 	<body style="background-color: black; color: #44EE44; font-family: monospace;" onload="connectToLog()">
+		<div id="console">
+			<div id="content"></div>
+		</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>
-		function connectToLog() {
+		var connectToLog = function() {
+			document.body.style.backgroundColor = "black";
 			try {
 				var logSocket = new WebSocket(((location.protocol === 'https:') ? "wss://" : "ws://") 
 						+ window.location.host + "/websockets/v3/ide/console");
 			} catch(e) {
-				append("-1", "[" + new Date().toISOString() + "] [ERROR]" + e.message, "background-color: black; font-family: monospace; color: red");
+				$("#content").after("<div style='background-color: black; font-family: monospace; color: red'>[" + new Date().toISOString() + "][error]" + e.message + "</div>");
+				
 			}
 			logSocket.onmessage = function (message) {
 				var record = JSON.parse(message.data);
@@ -24,26 +30,17 @@
 				
 				var date = new Date(record.timestamp);
 				var id = record.timestamp;
-				append(id, "[" + date.toISOString() + "] [" + record.level + "] " + record.message, "background-color: black; font-family: monospace; color: " + color);
-				window.location.hash = "#" + id;
+				$("#content").after("<div id='" + id + "' style='background-color: black; font-family: monospace; color: " + color + "'>[" + date.toISOString() + "]" + " [" + record.level + "] " + record.message + "</div>");
+				//window.location.hash = "#" + id;				
 			};
 			
 			setInterval(clear, 6000000);
 		}
-		
-		function clear() {
-			document.body.innerHTML = '';
-			append("0", "[" + new Date().toISOString() + "]...", "background-color: black; font-family: monospace; color: gray");
+		var clear = function() {
+			$("#console").html('<div id="content"></div>');
+			document.body.style.backgroundColor = "black";
+			$("#content").after("<div style='background-color: black; font-family: monospace; color: gray'>[" + new Date().toISOString() + "][cleared]...</div>");
 		}
-		
-		function append(id, content, style) {
-			var div = document.createElement('div');
-            div.id = id;
-			div.textContent = content;
-            div.style.cssText = style;
-			document.body.appendChild(div);
-		}
-		
 		</script>
 	</body>
 </html>
