--- a/content/ide-core/src/main/resources/ide/index.html
+++ b/content/ide-core/src/main/resources/ide/index.html
@@ -43,7 +43,9 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<i class="logo-icon icon-dirigible" style="color: #ffcc00">&#xe800;</i>
+				<!-- <img src="img/dirigible.png" style="width: 30px; margin-left: 10px"> -->
+				<!-- <i class="logo-icon icon-dirigible" style="color: #ffcc00">&#xe800;</i> -->
+				
 			</a>
 		</div>
 
