preview component registered in layout

--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -153,6 +153,9 @@
 			this.layout.registerComponent( 'Console', function( container, componentState ){
 				container.getElement().html( '<iframe src="../ide-console/console.html"></iframe>' );
 			});
+			this.layout.registerComponent( 'Preview', function( container, componentState ){
+				container.getElement().html( '<iframe src="../ide-preview/preview.html"></iframe>' );
+			});
 			
 			this.listeners = {};
 			
