--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -163,10 +163,8 @@
 				if(!this.listeners[eventType]){
 					this.listeners[eventType] = [];
 				}
-				var client = new FramesMessageHub({
-					topic: eventType
-				});
-				client.subscribe(callback);
+				var client = new FramesMessageHub();
+				client.subscribe(callback, eventType);
 
 				var entry = {
 					id: uuidv4(),
@@ -190,10 +188,9 @@
 		};
 		
 		function uuidv4() {
-		  return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
-			var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
-			return v.toString(16);
-		  });
+		  return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
+			(c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
+		  )
 		}
 	
 		var layoutCtrl = new LayoutController();
