--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -176,7 +176,7 @@
 			this.removeListener = function(id, eventType){
 				if(!this.listeners[eventType])
 					return;
-				for (var i = a.length - 1; i >= 0; i--) {
+				for (var i = this.listeners[eventType].length - 1; i >= 0; i--) {
 				  if (this.listeners[eventType][i].id == id) {
 					 this.listeners[eventType].splice(i, 1);
 				  }
